# eo-water-volume-estimator

./: .gitignore  CITATION.cff  LICENSE  MODELS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: .gitignore  run_yolo_timeseries.py  run_yolo_volume.py  validate_spill.py  validate_wet_area.py
figures/GIS/: visualizing_outputs.qgz
src/eo_water_volume/: __init__.py  contract.py  gauges.py  hydrograph.py  outputs.py  sources.py  uncertainty.py  volume.py  wse.py
tests/: test_contract.py  test_gauges.py  test_hydrograph.py  test_outputs.py  test_sources.py  test_uncertainty.py  test_volume.py  test_wse.py
