[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eo-water-volume-estimator"
version = "0.3.0"
description = "Water-volume estimation for the California Delta from EO water masks and a bathymetric DEM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Fernando Romero Galvan", email = "fernando.romero-galvan@water.ca.gov" }]
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
io = ["rasterio>=1.3"]
eo = ["earthaccess>=0.9"]
dev = ["pytest>=8", "black>=24", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/eo_water_volume"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/test_gauges.py" = ["E501"]  # verbatim gauge-response fixtures
